--- a/templates/stub.yml
+++ b/templates/stub.yml
@@ -3,7 +3,7 @@ meta:
   environment: NAME
   dns_root: microbosh
   security_groups:
-    - consul_docker
+    - consul
   stemcell:
     name: STEMCELL
 
